generate photos description, render 25 photos and bigPhoto

--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
-
+<script src="js/main.js"></script>
+<script src="js/photos.js"></script>
+<script src="js/mainPhoto.js"></script>
 </body>
 </html>
